--- a/MovieWeb/Views/Home/Index.cshtml
+++ b/MovieWeb/Views/Home/Index.cshtml
@@ -1,6 +1,17 @@
-﻿@{
+﻿@model List<ApplicationCore.Models.MovieCard>
+@{
     ViewData["Title"] = "Home Page";
 }
+<div class="container-fluid">
+    <div class="row">
+        @foreach (var movie in Model)
+        {
+            <div class="col-6 col-sm-4 col-md-3 col-xl-2">
+                <partial name="_MovieCard" model="movie" />
+             </div>
+        }
+    </div>
+</div>
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
