--- a/MovieWeb/Views/Shared/_Layout.cshtml
+++ b/MovieWeb/Views/Shared/_Layout.cshtml
@@ -28,7 +28,9 @@
                     </ul>
                 </div>
             </div>
+            <partial name ="_LoginInfo" />
         </nav>
+        
     </header>
     <div class="container">
         <main role="main" class="pb-3">
