--- a/MovieWeb/Views/Shared/_LoginInfo.cshtml
+++ b/MovieWeb/Views/Shared/_LoginInfo.cshtml
@@ -20,7 +20,7 @@
             </li>
             <li><hr class="dropdown-divider" /></li>
             <li>
-                <form method="post" asp-controller="Accounts" asp-action="Logout" class="px-3">
+                <form method="post" asp-controller="Account" asp-action="Logout" class="px-3">
                     <button type="submit" class="btn btn-outline-danger btn-sm w-100">
                         <i class="bi bi-box-arrow-right me-1"></i>Logout
                     </button>
@@ -32,10 +32,10 @@
 else
 {
     <div class="d-flex align-items-center gap-2">
-        <a class="btn btn-outline-primary btn-sm px-3" asp-controller="Accounts" asp-action="Login">
+        <a class="btn btn-outline-primary btn-sm px-3" asp-controller="Account" asp-action="Login">
             <i class="bi bi-box-arrow-in-right me-1"></i>Login
         </a>
-        <a class="btn btn-primary btn-sm px-3" asp-controller="Accounts" asp-action="Register">
+        <a class="btn btn-primary btn-sm px-3" asp-controller="Account" asp-action="Register">
             <i class="bi bi-person-plus me-1"></i>Register
         </a>
     </div>
